=================
Changes for Crate
=================

Unreleased
==========

 - Division by aggregation that resulted in 0
   (e.g. SELECT max(long_col) / min(long_col) from t) now correctly returns
   ArtithmeticException and does not hang any more.

 - Fixed a race condition in `KILL` statements which lead to a memory leak.

 - Fixed an issue that prevent a node from starting on Windows if the
   sigar-plugin is removed.

2017/03/14 1.0.5
================

 - Fix: Case sensivity of aliases wasn't handled correctly.
   Aliases are now fully case sensitive.

 - Fixed a race condition that could have caused that not all columns were
   written to the metadata when a lot of new dynamic columns were generated
   concurrently.

 - Fixed an issue that caused joins on `information_schema.columns` to produce
   a wrong result if `information_schema.columns` was used as the right table.

2017/02/24 1.0.4
================

 - Fixed an issue which caused restoring a whole partitioned table from a
   snapshot to fail.

 - Fixed low/high disk-based shard allocation watermark checks. The checks
   treated the disk watermark settings as non-runtime. Therefore, new values
   for these settings were ignored.

 - Fixed the low/high disk-based shard allocation watermark settings. When
   a percentage value is provided for either of settings, it won't be converted
   to an absolute byte value.

 - Fix: Index columns based on string arrays are correctly populated with values.

 - Updated crate-admin to ``1.0.5`` which includes the following change:

    - Fixed a console results issue that caused the results table not to be
      displayed after horizontal scrolling.

    - Fixed an issue that caused the admin-ui to load only one plugin.

    - Display warning in the console view when the query result contains
      an unsafe integer.

    - Relocated the help resources section to be underneath the tweet
      import tutorial.
